--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -53,7 +53,7 @@
                  data-appear-animation="fadeIn" data-appear-animation-delay="800" data-plugin-options="{'accY': -200}"
                  style="animation-delay: 800ms;">
 
-                <h4 class="pt-5">Our <strong>Office</strong></h4>
+                <h4 class="pt-5">Nuestra <strong>Oficina</strong></h4>
                 <ul class="list list-icons list-icons-style-3 mt-2">
                     <li><i class="fas fa-map-marker-alt top-6"></i> <strong>Dirección:</strong>
                         {{ configuracion.direccion }}
