--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -70,9 +70,9 @@
 
                 <h4 class="pt-5">Business <strong>Hours</strong></h4>
                 <ul class="list list-icons list-dark mt-2">
-                    <li><i class="far fa-clock top-6"></i> Monday - Friday - 9am to 5pm</li>
-                    <li><i class="far fa-clock top-6"></i> Saturday - 9am to 2pm</li>
-                    <li><i class="far fa-clock top-6"></i> Sunday - Closed</li>
+                    <li><i class="far fa-clock top-6"></i> Lunes a Viernes - {{ configuracion.lunes_viernes_horario }}</li>
+                    <li><i class="far fa-clock top-6"></i> Sábado - {{ configuracion.sabado_horario }}</li>
+                    <li><i class="far fa-clock top-6"></i> Domingo - {{ configuracion.domingo_horario }}</li>
                 </ul>
 
             </div>
