--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -68,7 +68,7 @@
                  data-appear-animation="fadeIn" data-appear-animation-delay="1000" data-plugin-options="{'accY': -200}"
                  style="animation-delay: 1000ms;">
 
-                <h4 class="pt-5">Business <strong>Hours</strong></h4>
+                <h4 class="pt-5">Horario <strong>de Atención</strong></h4>
                 <ul class="list list-icons list-dark mt-2">
                     <li><i class="far fa-clock top-6"></i> Lunes a Viernes - {{ configuracion.lunes_viernes_horario }}</li>
                     <li><i class="far fa-clock top-6"></i> Sábado - {{ configuracion.sabado_horario }}</li>
