Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -6,5 +6,27 @@
 </head>
 <body>
 <h1>Politicas de uso de la aplicacion web</h1>
+<p>
+    Las presentes Condiciones de Uso no excluyen la posibilidad de que determinados Servicios de
+las aplicaciones, por sus características particulares, sean sometidos, además de a las
+Condiciones Generales de Uso, a sus propias condiciones particulares de uso (en adelante las
+Condiciones Particulares).
+La Empresa podrá, en cualquier momento y sin necesidad de previo aviso, realizar cambios y
+actualizaciones de las presentes Condiciones de Uso y de la Política de Privacidad. Estos
+cambios serán publicados en la Web y en la/s Aplicación/es y serán efectivos desde el
+momento de su publicación.
+Como consecuencia de lo anterior, el Usuario deberá revisar periódicamente si hay cambios en
+estas Condiciones y, tanto si existe consentimiento expreso como si no, si el Usuario continua
+usando el Servicio tras la publicación, ello implica la aceptación y asunción de los mismos. En
+caso de que no esté de acuerdo con las actualizaciones de las Condiciones de uso o de la
+Política de Privacidad, podrá renunciar dejando de usar el Servicio.
+El acceso y descarga de la aplicación es gratuito salvo en lo relativo al coste de la conexión a
+través de la red de telecomunicaciones suministrada por el proveedor de acceso contratado
+por los usuarios. Determinados servicios son exclusivos para nuestros clientes y su acceso se
+encuentra restringido.
+La descarga y uso de la aplicación atribuye la condición de usuario de la misma (en adelante, el
+‘Usuario') e implica la lectura, entendimiento y aceptación de todos los términos y condiciones
+recogidas por la presente.
+</p>
 </body>
 </html>
