Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -10,11 +10,11 @@
     Las presentes Condiciones de Uso no excluyen la posibilidad de que determinados Servicios de
 las aplicaciones, por sus características particulares, sean sometidos, además de a las
 Condiciones Generales de Uso, a sus propias condiciones particulares de uso (en adelante las
-Condiciones Particulares).
+Condiciones Particulares). <br>
 La Empresa podrá, en cualquier momento y sin necesidad de previo aviso, realizar cambios y
 actualizaciones de las presentes Condiciones de Uso y de la Política de Privacidad. Estos
 cambios serán publicados en la Web y en la/s Aplicación/es y serán efectivos desde el
-momento de su publicación.
+momento de su publicación. <br>
 Como consecuencia de lo anterior, el Usuario deberá revisar periódicamente si hay cambios en
 estas Condiciones y, tanto si existe consentimiento expreso como si no, si el Usuario continua
 usando el Servicio tras la publicación, ello implica la aceptación y asunción de los mismos. En
@@ -23,10 +23,33 @@ Política de Privacidad, podrá renunciar dejando de usar el Servicio.
 El acceso y descarga de la aplicación es gratuito salvo en lo relativo al coste de la conexión a
 través de la red de telecomunicaciones suministrada por el proveedor de acceso contratado
 por los usuarios. Determinados servicios son exclusivos para nuestros clientes y su acceso se
-encuentra restringido.
+encuentra restringido. <br>
 La descarga y uso de la aplicación atribuye la condición de usuario de la misma (en adelante, el
 ‘Usuario') e implica la lectura, entendimiento y aceptación de todos los términos y condiciones
 recogidas por la presente.
+</p>
+<p>
+- No introducir o difundir contenidos o propaganda de carácter racista, xenófobo,
+pornográfico, de apología del terrorismo o que atenten contra los derechos humanos. <br>
+- No introducir o difundir en la red programas de datos (virus y software nocivo) susceptibles
+de provocar daños en los sistemas informáticos del proveedor de acceso, sus proveedores o
+terceros usuarios de la red Internet. <br>
+- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información,
+elemento o contenido que atente contra los derechos fundamentales y las libertades públicas
+reconocidos constitucionalmente y en los tratados internacionales. <br>
+- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información,
+elemento o contenido que constituya publicidad ilícita o desleal. <br>
+- No transmitir publicidad no solicitada o autorizada, material publicitario, "correo basura",
+"cartas en cadena", "estructuras piramidales", o cualquier otra forma de solicitación, excepto
+en aquellas áreas (tales como espacios comerciales) que hayan sido exclusivamente
+concebidas para ello. <br>
+- No introducir o difundir cualquier información y contenidos falsos, ambiguos o inexactos de
+forma que induzca a error a los receptores de la información. <br>
+- No suplantar a otros usuarios utilizando sus claves de registro a los distintos servicios y/o
+contenidos de los Portales. <br>
+- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información,
+elemento o contenido que suponga una violación del secreto de las comunicaciones y la
+legislación de datos de carácter personal.
 </p>
 </body>
 </html>
