Cambios en la plantilla

--- a/templates/prueba_pago.html
+++ b/templates/prueba_pago.html
@@ -20,10 +20,10 @@
 //Se ingresan los datos de la transaccion ej. monto, impuestos, etc
                     return actions.prepare({
 
-                        amount: 20,
-                        amountWithoutTax: 20,
+                        amount: 200,
+                        amountWithoutTax: 200,
                         currency: "USD",
-                        clientTransactionId: "1"
+                        clientTransactionId: "Pruebas1"
                     });
 
                 },
