Cambios en la plantilla

--- a/templates/prueba_pago.html
+++ b/templates/prueba_pago.html
@@ -50,7 +50,7 @@
                         amount: 2000,
                         amountWithoutTax: 2000,
                         currency: "USD",
-                        clientTransactionId: idtransaccion
+                        clientTransactionId: idtransaccion.replace(".","")
                     });
 
                 },
