Cambios en la plantilla

--- a/templates/pagos_ok.html
+++ b/templates/pagos_ok.html
@@ -1,7 +1,7 @@
 {% extends 'index-corporate.html' %}
 {% block contenido %}
     <div class="alert alert-primary">
-        <p>Nodusnet agradece su pago.!</p>
-        <a target="_blank" href="/cash/">Click para regresar.</a>
+        <p style="color: white">Nodusnet agradece su pago.!</p>
+        <a target="_blank" href="/cash/" style="color: white"><strong>Click para regresar.</strong></a>
     </div>
 {% endblock %}
