Cambios en la plantilla

--- a/templates/pagos_ok.html
+++ b/templates/pagos_ok.html
@@ -2,6 +2,6 @@
 {% block contenido %}
     <div class="alert alert-primary">
         <p style="color: white">Nodusnet agradece su pago.!</p>
-        <a target="_blank" href="/cash/" style="color: white"><strong>Click para regresar.</strong></a>
+        <a target="_blank" href="/cash" style="color: white"><strong>Click para regresar.</strong></a>
     </div>
 {% endblock %}
