Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -1,55 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Politicas de Uso de la Aplicación</title>
-</head>
-<body>
-<h1>Politicas de uso de la aplicacion web</h1>
-<p>
-    Las presentes Condiciones de Uso no excluyen la posibilidad de que determinados Servicios de
-las aplicaciones, por sus características particulares, sean sometidos, además de a las
-Condiciones Generales de Uso, a sus propias condiciones particulares de uso (en adelante las
-Condiciones Particulares). <br>
-La Empresa podrá, en cualquier momento y sin necesidad de previo aviso, realizar cambios y
-actualizaciones de las presentes Condiciones de Uso y de la Política de Privacidad. Estos
-cambios serán publicados en la Web y en la/s Aplicación/es y serán efectivos desde el
-momento de su publicación. <br>
-Como consecuencia de lo anterior, el Usuario deberá revisar periódicamente si hay cambios en
-estas Condiciones y, tanto si existe consentimiento expreso como si no, si el Usuario continua
-usando el Servicio tras la publicación, ello implica la aceptación y asunción de los mismos. En
-caso de que no esté de acuerdo con las actualizaciones de las Condiciones de uso o de la
-Política de Privacidad, podrá renunciar dejando de usar el Servicio.
-El acceso y descarga de la aplicación es gratuito salvo en lo relativo al coste de la conexión a
-través de la red de telecomunicaciones suministrada por el proveedor de acceso contratado
-por los usuarios. Determinados servicios son exclusivos para nuestros clientes y su acceso se
-encuentra restringido. <br>
-La descarga y uso de la aplicación atribuye la condición de usuario de la misma (en adelante, el
-‘Usuario') e implica la lectura, entendimiento y aceptación de todos los términos y condiciones
-recogidas por la presente.
+{% extends 'index-corporate.html' %}
+{% block contenido %}
+    <p> Dirección: Av. Ejercito y Gral Manuel Serrano, El Guabo, El Oro</p>
+<p>Teléfonos: 0993972840</p>
+<p>Correo: nodusnet.2020@gmail.com</p>
+<p>Horarios de atención: Lunes a Viernes de 8am a 5pm</p>
+<p style="font-weight: bold">
+Recuerda que la Ley Orgánica de las Personas Adultas Mayores, publicada en el Registro Oficial Suplemento 484 de 09 de mayo de 2019, en su artículo 13 dispone el beneficio del descuento del 50% en cualquier plan por debajo del 12% de un SBU (Resolución ARCOTEL-2021-0073). Consulta si puedes acceder a dicho requisito.
 </p>
-<p>
-- No introducir o difundir contenidos o propaganda de carácter racista, xenófobo,
-pornográfico, de apología del terrorismo o que atenten contra los derechos humanos. <br>
-- No introducir o difundir en la red programas de datos (virus y software nocivo) susceptibles
-de provocar daños en los sistemas informáticos del proveedor de acceso, sus proveedores o
-terceros usuarios de la red Internet. <br>
-- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información,
-elemento o contenido que atente contra los derechos fundamentales y las libertades públicas
-reconocidos constitucionalmente y en los tratados internacionales. <br>
-- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información,
-elemento o contenido que constituya publicidad ilícita o desleal. <br>
-- No transmitir publicidad no solicitada o autorizada, material publicitario, "correo basura",
-"cartas en cadena", "estructuras piramidales", o cualquier otra forma de solicitación, excepto
-en aquellas áreas (tales como espacios comerciales) que hayan sido exclusivamente
-concebidas para ello. <br>
-- No introducir o difundir cualquier información y contenidos falsos, ambiguos o inexactos de
-forma que induzca a error a los receptores de la información. <br>
-- No suplantar a otros usuarios utilizando sus claves de registro a los distintos servicios y/o
-contenidos de los Portales. <br>
-- No difundir, transmitir o poner a disposición de terceros cualquier tipo de información,
-elemento o contenido que suponga una violación del secreto de las comunicaciones y la
-legislación de datos de carácter personal.
-</p>
-</body>
-</html>
+{% endblock %}
