Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -1,6 +1,15 @@
 {% extends 'index-corporate.html' %}
 {% block contenido %}
-    <p> Dirección: Av. Ejercito y Gral Manuel Serrano, El Guabo, El Oro</p>
+<section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 align-self-center p-static order-2 text-center">
+                <h1 class="text-dark font-weight-bold text-8">Nodusnet Políticas de Privacidad y uso del Sistema Web</h1>
+            </div>
+        </div>
+    </div>
+</section>
+<p> Dirección: Av. Ejercito y Gral Manuel Serrano, El Guabo, El Oro</p>
 <p>Teléfonos: 0993972840</p>
 <p>Correo: nodusnet.2020@gmail.com</p>
 <p>Horarios de atención: Lunes a Viernes de 8am a 5pm</p>
