Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -4,16 +4,26 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 align-self-center p-static order-2 text-center">
-                <h1 class="text-dark font-weight-bold text-8">Nodusnet Políticas de Privacidad y uso del Sistema Web</h1>
+                <h1 class="text-dark font-weight-bold text-8">Políticas de Privacidad y uso del Sistema Web</h1>
             </div>
         </div>
     </div>
 </section>
-<p> Dirección: Av. Ejercito y Gral Manuel Serrano, El Guabo, El Oro</p>
-<p>Teléfonos: 0993972840</p>
-<p>Correo: nodusnet.2020@gmail.com</p>
-<p>Horarios de atención: Lunes a Viernes de 8am a 5pm</p>
-<p style="font-weight: bold">
-Recuerda que la Ley Orgánica de las Personas Adultas Mayores, publicada en el Registro Oficial Suplemento 484 de 09 de mayo de 2019, en su artículo 13 dispone el beneficio del descuento del 50% en cualquier plan por debajo del 12% de un SBU (Resolución ARCOTEL-2021-0073). Consulta si puedes acceder a dicho requisito.
-</p>
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-12">
+                <p> Dirección: Av. Ejercito y Gral Manuel Serrano, El Guabo, El Oro</p>
+                <p>Teléfonos: 0993972840</p>
+                <p>Correo: nodusnet.2020@gmail.com</p>
+                <p>Horarios de atención: Lunes a Viernes de 8am a 5pm</p>
+                <p style="font-weight: bold">
+                    Recuerda que la Ley Orgánica de las Personas Adultas Mayores, publicada en el Registro Oficial
+                    Suplemento 484 de 09 de mayo de 2019, en su artículo 13 dispone el beneficio del descuento del 50%
+                    en cualquier plan por debajo del 12% de un SBU (Resolución ARCOTEL-2021-0073). Consulta si puedes
+                    acceder a dicho requisito.
+                </p>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
