--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -22,6 +22,7 @@
                     en cualquier plan por debajo del 12% de un SBU (Resolución ARCOTEL-2021-0073). Consulta si puedes
                     acceder a dicho requisito.
                 </p>
+                <p><a href="https://sites.google.com/view/nodusnet/calidad" class="btn btn-primary">Calidad del Servicio</a></p>
             </div>
         </div>
     </div>
