Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -22,7 +22,11 @@
                     en cualquier plan por debajo del 12% de un SBU (Resolución ARCOTEL-2021-0073). Consulta si puedes
                     acceder a dicho requisito.
                 </p>
-                <p><a href="https://sites.google.com/view/nodusnet/calidad" class="btn btn-primary">Calidad del Servicio</a></p>
+                <p>
+                    <a target="_blank" href="https://sites.google.com/view/nodusnet/calidad" class="btn btn-primary">Calidad del Servicio</a>
+                    <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/seguridad" class="btn btn-primary">Consejos de Seguridad</a>
+                    <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/ancho-de-banda" class="btn btn-primary">Ancho de Banda</a>
+                </p>
             </div>
         </div>
     </div>
