--- a/templates/planes.html
+++ b/templates/planes.html
@@ -1,17 +1,274 @@
 {% extends 'index-corporate.html' %}
 {% block contenido %}
-<section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 align-self-center p-static order-2 text-center">
-                <h1 class="text-dark font-weight-bold text-8">Nuestros Planes</h1>
+    <section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 align-self-center p-static order-2 text-center">
+                    <h1 class="text-dark font-weight-bold text-8">Nuestros Planes</h1>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
     <div class="container py-4">
-        <div class="row">
-
+        <div class="pricing-table pricing-table-no-gap mb-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Enterprise</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>59</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>10GB Disk Space</li>
+                            <li>100GB Monthly Bandwith</li>
+                            <li>20 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Professional</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>29</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>5GB Disk Space</li>
+                            <li>50GB Monthly Bandwith</li>
+                            <li>10 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="plan plan-featured">
+                    <div class="plan-header bg-primary">
+                        <h3>Standard</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>17</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>3GB Disk Space</li>
+                            <li>25GB Monthly Bandwith</li>
+                            <li>5 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-primary btn-modern py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Basic</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>9</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>1GB Disk Space</li>
+                            <li>10GB Monthly Bandwith</li>
+                            <li>2 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col">
+                <hr class="solid my-5">
+                <h4><strong>Three</strong> Plans</h4>
+            </div>
+        </div>
+        <div class="pricing-table pricing-table-no-gap mb-4">
+            <div class="col-md-4">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Enterprise</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>59</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>10GB Disk Space</li>
+                            <li>100GB Monthly Bandwith</li>
+                            <li>20 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="plan plan-featured">
+                    <div class="plan-header bg-primary">
+                        <h3>Standard</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>17</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>3GB Disk Space</li>
+                            <li>25GB Monthly Bandwith</li>
+                            <li>5 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-primary btn-modern py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Basic</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>9</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>1GB Disk Space</li>
+                            <li>10GB Monthly Bandwith</li>
+                            <li>2 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col">
+                <hr class="tall my-5">
+                <h4><strong>With Gap</strong> Style</h4>
+            </div>
+        </div>
+        <div class="pricing-table mb-4">
+            <div class="col-md-6 col-lg-3">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Enterprise</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>59</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>10GB Disk Space</li>
+                            <li>100GB Monthly Bandwith</li>
+                            <li>20 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Professional</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>29</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>5GB Disk Space</li>
+                            <li>50GB Monthly Bandwith</li>
+                            <li>10 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="plan plan-featured">
+                    <div class="plan-header bg-primary">
+                        <h3>Standard</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>17</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>3GB Disk Space</li>
+                            <li>25GB Monthly Bandwith</li>
+                            <li>5 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-primary btn-modern py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h3>Basic</h3>
+                    </div>
+                    <div class="plan-price">
+                        <span class="price"><span class="price-unit">$</span>9</span>
+                        <label class="price-label">PER MONTH</label>
+                    </div>
+                    <div class="plan-features">
+                        <ul>
+                            <li>1GB Disk Space</li>
+                            <li>10GB Monthly Bandwith</li>
+                            <li>2 Email Accounts</li>
+                            <li>Unlimited Subdomains</li>
+                        </ul>
+                    </div>
+                    <div class="plan-footer">
+                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
