--- a/templates/planes.html
+++ b/templates/planes.html
@@ -10,9 +10,9 @@
         </div>
     </section>
     <div class="container py-4">
-        <div class="pricing-table mb-4">
+        <div class="pricing-table pricing-table-no-gap mb-4">
         {% for plan in planes %}
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-4">
                 <div class="plan">
                     <div class="plan-header {% if plan.destacado %}bg-primary{% endif %}">
                         <h3>{{ plan.titulo }}</h3>
