Cambios en la plantilla

--- a/templates/planes.html
+++ b/templates/planes.html
@@ -31,7 +31,10 @@
                         </ul>
                     </div>
                     <div class="plan-footer">
-                        <a href="#" class="btn btn-dark btn-modern btn-outline py-2 px-4">Sign Up</a>
+                        <div class="call-to-action-btn">
+                            <a href="https://api.whatsapp.com/send?phone=+593993700053&text=Hola,Quiero solicitar el plan: {{ plan.titulo }}, de {{ plan.precio_con_impuesto }}!"
+                               target="_blank" class="btn btn-modern btn-primary">Solicitar!</a>
+                        </div>
                     </div>
                 </div>
             </div>
