Cambios en la plantilla

--- a/templates/planes.html
+++ b/templates/planes.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="plan-footer">
                         <div class="call-to-action-btn">
-                            <a href="https://api.whatsapp.com/send?phone=+593993700053&text=Hola,Quiero solicitar el plan: {{ plan.titulo }}, de {{ plan.precio_con_impuesto }}!"
+                            <a href="https://api.whatsapp.com/send?phone=+593993700053&text=Hola,Quiero solicitar el plan: {{ plan.titulo }}, de ${{ plan.precio_con_impuesto }} incluido impuestos. "
                                target="_blank" class="btn btn-modern btn-primary">Solicitar!</a>
                         </div>
                     </div>
