--- a/templates/planes.html
+++ b/templates/planes.html
@@ -13,7 +13,7 @@
         <div class="pricing-table pricing-table-no-gap mb-4">
             {% for plan in planes %}
                 <div class="col-md-12 col-lg-3">
-                    <div class="plan" style="width: 100%">
+                    <div class="plan">
                         <div class="plan-header {% if plan.destacado %}bg-primary{% endif %}">
                             <h3>{{ plan.titulo }}</h3>
                         </div>
