--- a/templates/planes.html
+++ b/templates/planes.html
@@ -12,7 +12,7 @@
     <div class="container py-4">
         <div class="pricing-table pricing-table-no-gap mb-4">
             {% for plan in planes %}
-                <div class="col-md-12 col-lg-3">
+                <div class="col-lg-3">
                     <div class="plan">
                         <div class="plan-header {% if plan.destacado %}bg-primary{% endif %}">
                             <h3>{{ plan.titulo }}</h3>
