--- a/templates/planes.html
+++ b/templates/planes.html
@@ -10,7 +10,7 @@
         </div>
     </section>
     <div class="container py-4">
-        <div class="pricing-table pricing-table-no-gap mb-4">
+        <div class="pricing-table pricing-table-no-gap mb-4 row">
             {% for plan in planes %}
                 <div class="col-lg-3">
                     <div class="plan">
