Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -1,14 +1,14 @@
 {% extends 'index-corporate.html' %}
 {% block contenido %}
-<section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 align-self-center p-static order-2 text-center">
-                <h1 class="text-dark font-weight-bold text-8">Políticas de Privacidad y uso del Sistema Web</h1>
+    <section class="page-header page-header-modern bg-color-light-scale-1 page-header-md">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 align-self-center p-static order-2 text-center">
+                    <h1 class="text-dark font-weight-bold text-8">Políticas de Privacidad y uso del Sistema Web</h1>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
     <div class="container py-4">
         <div class="row">
             <div class="col-12">
@@ -22,11 +22,20 @@
                     en cualquier plan por debajo del 12% de un SBU (Resolución ARCOTEL-2021-0073). Consulta si puedes
                     acceder a dicho requisito.
                 </p>
-                <p>
-                    <a target="_blank" href="https://sites.google.com/view/nodusnet/calidad" class="btn btn-primary">Calidad del Servicio</a>
-                    <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/seguridad" class="btn btn-primary">Consejos de Seguridad</a>
-                    <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/ancho-de-banda" class="btn btn-primary">Ancho de Banda</a>
-                </p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <a target="_blank" href="https://sites.google.com/view/nodusnet/calidad"
+                           class="btn btn-primary">Calidad del Servicio</a>
+                    </div>
+                    <div class="col-md-4">
+                        <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/seguridad"
+                           class="btn btn-primary">Consejos de Seguridad</a>
+                    </div>
+                    <div class="col-md-4">
+                        <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/ancho-de-banda"
+                           class="btn btn-primary">Ancho de Banda</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
