Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -25,15 +25,15 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a target="_blank" href="https://sites.google.com/view/nodusnet/calidad"
-                           class="btn btn-primary">Calidad del Servicio</a>
+                           class="btn btn-primary" style="width: 100%">Calidad del Servicio</a>
                     </div>
                     <div class="col-md-4">
                         <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/seguridad"
-                           class="btn btn-primary">Consejos de Seguridad</a>
+                           class="btn btn-primary" style="width: 100%">Consejos de Seguridad</a>
                     </div>
                     <div class="col-md-4">
                         <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/ancho-de-banda"
-                           class="btn btn-primary">Ancho de Banda</a>
+                           class="btn btn-primary" style="width: 100%">Ancho de Banda</a>
                     </div>
                 </div>
             </div>
