Cambios en la plantilla

--- a/templates/politicas.html
+++ b/templates/politicas.html
@@ -23,15 +23,15 @@
                     acceder a dicho requisito.
                 </p>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 py-1">
                         <a target="_blank" href="https://sites.google.com/view/nodusnet/calidad"
                            class="btn btn-primary" style="width: 100%">Calidad del Servicio</a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 py-1">
                         <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/seguridad"
                            class="btn btn-primary" style="width: 100%">Consejos de Seguridad</a>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 py-1">
                         <a target="_blank" href="https://sites.google.com/view/nodusnet/consejos/ancho-de-banda"
                            class="btn btn-primary" style="width: 100%">Ancho de Banda</a>
                     </div>
