Cambios en la plantilla

--- a/templates/planes.html
+++ b/templates/planes.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="plan-features">
                             <ul>
-                                <li>Tipo $ {{ plan.tipo }}</li>
+                                <li>Tipo: {{ plan.tipo }}</li>
                                 <li>Precio sin Impuesto: ${{ plan.precio_sin_impuesto }}</li>
                                 <li>Tecnología: {{ plan.tecnologia }}</li>
                                 <li>Velocidad máxima: {{ plan.velocidad }}</li>
