--- a/templates/velocidad.html
+++ b/templates/velocidad.html
@@ -1,4 +1,7 @@
 {% extends 'index-corporate.html' %}
 {% block contenido %}
-<iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=es"></iframe>
+<div style="height: 500px">
+    <iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="https://www.metercustom.net/plugin/?hl=es"></iframe>
+</div>
 {% endblock %}
+
