--- a/templates/prueba_pago.html
+++ b/templates/prueba_pago.html
@@ -8,72 +8,64 @@
 <body>
 <div id="pp-button"></div>
 
-<script src="https://pay.payphonetodoesposible.com/api/button/js?appId=F8BQRJffnkOm79ae8BCE5w"></script>
+<script src="https://pay.payphonetodoesposible.com/api/button/js?appId={{ configuracion.appid }}"></script>
 <script>
-    var idtransaccion="";
-    function mueveReloj(){
+    var idtransaccion = "";
+
+    function mueveReloj() {
         momentoActual = new Date()
         hora = momentoActual.getHours()
         minuto = momentoActual.getMinutes()
         segundo = momentoActual.getSeconds()
-
-        horaImprimible ="NODUSNET-"+Math.random() * (9999999999 - 9999 + 1)+"-"+momentoActual.getFullYear()+""+momentoActual.getMonth()+""+momentoActual.getDay()+""+ hora + minuto  + segundo
-
+        horaImprimible = "NODUSNET-" + Math.random() * (9999999999 - 9999 + 1) + "-" + momentoActual.getFullYear() + "" + momentoActual.getMonth() + "" + momentoActual.getDay() + "" + hora + minuto + segundo
         idtransaccion = horaImprimible
-
-        //La función se tendrá que llamar así misma para que sea dinámica,
-        //de esta forma:
-
-        setTimeout(mueveReloj,1000)
+        setTimeout(mueveReloj, 1000)
     }
 
     mueveReloj()
 
-        window.onload = function () {
-            payphone.Button({
+    data = {
+        amount: 20.60*100,
+        amountWithoutTax: 20.60*100,
+        currency: "USD",
+        storeId: "{{ configuracion.storeid }}",
+        clientTransactionId: idtransaccion.replace(".", "")
+    }
+    window.onload = function () {
+        payphone.Button({
+            //token obtenido desde la consola de developer
+            token: "{{ configuracion.token }}",
+            //PARÁMETROS DE CONFIGURACIÓN
+            btnHorizontal: true,
+            btnCard: true,
+            createOrder: function (actions) {
+                console.log()
+                return actions.prepare(data);
 
-//token obtenido desde la consola de developer
-                token: "bhdcVxutdPvAFeUBUa4u93Ero0U7J4NPC3DLJ-kzww5ZSWMDc3aWI5IabyMqHcWc64U4q-HElHlqxRVq0ALlob2cfXQQ-58dLRIAh_KAANhjW30nr6qR87pzazFVYhUnmQtzkR9ccqRzIFypQDxEANFm1beAUSi4Lsc570IkbdfMq6Zm11b0oE2pEWxNMLhTjkilgQeLVKkHyK-Vfl-aPe95V8Xk8YpMoZjYT6K3-DZXfcoDbTY55cDnutZcDujamgYKOuuT7s5dLhIM2l4NW4ISB-7P0-_iCtHMwWnq3YyHN7gJABzJfKCwX_Jw_ujq--QQ-0mPjO5W0aNcvVDSx_NbtoY",
-
-//PARÁMETROS DE CONFIGURACIÓN
-                btnHorizontal: true,
-                btnCard: true,
-
-                createOrder: function (actions) {
-
-//Se ingresan los datos de la transaccion ej. monto, impuestos, etc
-
-                    console.log()
-                    return actions.prepare({
-                        amount: 2000,
-                        amountWithoutTax: 2000,
-                        currency: "USD",
-                        clientTransactionId: idtransaccion.replace(".","")
-                    });
-
-                },
-                onComplete: function (model, actions) {
-
-//Se confirma el pago realizado
-                    actions.confirm({
-                        id: model.id,
-                        clientTxId: model.clientTxId
-                    }).then(function (value) {
-
-//EN ESTA SECCIÓN SE RECIBE LA RESPUESTA Y SE MUESTRA AL USUARIO
-
-                        if (value.transactionStatus == "Approved") {
-                            alert("Pago " + value.transactionId + " recibido, estado " + value.transactionStatus);
-                            console.log(value.transactionId + " recibido, estado " + value.transactionStatus)
-                        }
-                    }).catch(function (err) {
-                        console.log(err);
-                    });
-
-                }
-            }).render("#pp-button");
-
-        }
+            },
+            onComplete: function (model, actions) {
+                //Se confirma el pago realizado
+                actions.confirm({
+                    id: model.id,
+                    clientTxId: model.clientTxId
+                }).then(function (value) {
+                //EN ESTA SECCIÓN SE RECIBE LA RESPUESTA Y SE MUESTRA AL USUARIO
+                    if (value.transactionStatus == "Approved") {
+                        alert("Pago " + value.transactionId + " recibido, estado " + value.transactionStatus);
+                        console.log(value.transactionId + " recibido, estado " + value.transactionStatus)
+                    }
+                }).catch(function (err) {
+                    console.log(err);
+                });
+            }
+        }).render("#pp-button");
+    }
 </script>
+
+<script>
+
+</script>
+
+
 </body>
 </html>
